# task

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
memory/: MEMORY.md  feedback_style.md
src/task/: __init__.py  cli.py  command.py  commands.py  config.py  dates.py  db.py  events.py  models.py  parse.py  storage.py  urgency.py
src/task/templates/: day.md.j2  month.md.j2  week.md.j2
tests/: __init__.py  conftest.py  test_command_add.py  test_command_init.py  test_command_show.py  test_commands.py  test_config.py  test_dates.py  test_db.py  test_db_add.py  test_depends.py  test_events.py  test_models.py  test_parse.py  test_query.py  test_storage.py  test_time_tracking.py  test_urgency.py
