[project]
name = "task"
version = "1.0.0"
description = "Personal task warrior clone for use on Windows"
readme = "README.md"
authors = [
    { name = "vladislavradonjic", email = "vanjar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "networkx>=3.5",
    "platformdirs>=4.9.6",
    "polars>=1.35.1",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.2.0",
]

[project.scripts]
tsk = "task:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
